Installment for match until pattern enhancement
git-svn-id: http://svn.codehaus.org/esper/esper/branches/enhancements220@1340 d91eb1b3-1215-0410-9718-d41490442091